--- a/quiz/app/src/main/res/layout/activity_main.xml
+++ b/quiz/app/src/main/res/layout/activity_main.xml
@@ -42,12 +42,10 @@
         tools:layout_editor_absoluteY="0dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/startButton"
         android:layout_width="174dp"
         android:layout_height="67dp"
         android:text="Start"
-        tools:layout_editor_absoluteX="102dp"
-        tools:layout_editor_absoluteY="428dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
