--- a/quiz/app/src/main/res/layout/activity_first_question.xml
+++ b/quiz/app/src/main/res/layout/activity_first_question.xml
@@ -106,10 +106,13 @@
 
         </RadioGroup>
     </RelativeLayout>
+
     <RelativeLayout
+        android:id="@+id/question1"
         android:layout_width="match_parent"
         android:layout_height="566dp"
-        android:id="@+id/question1">
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="33dp">
 
         <ImageView
             android:id="@+id/imageView3"
@@ -117,7 +120,7 @@
             android:layout_height="278dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="113dp"
+            android:layout_marginTop="130dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -134,4 +137,75 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="116dp" />
     </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/question2"
+        android:layout_width="match_parent"
+        android:layout_height="566dp"
+        tools:layout_editor_absoluteX="78dp"
+        tools:layout_editor_absoluteY="33dp">
+
+        <ImageButton
+            android:layout_width="139dp"
+            android:layout_height="132dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="43dp"
+            android:layout_marginTop="142dp"
+            android:onClick="imageClick"
+            android:scaleType="fitCenter"
+            android:alpha="0.5"
+            android:src="@drawable/civil_war_suit" />
+
+        <ImageButton
+            android:layout_width="139dp"
+            android:layout_height="132dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="201dp"
+            android:layout_marginTop="145dp"
+            android:onClick="imageClick"
+            android:scaleType="fitCenter"
+            android:alpha="0.5"
+            android:src="@drawable/black_suit" />
+
+        <ImageButton
+            android:id="@+id/correctAnswer"
+            android:layout_width="139dp"
+            android:layout_height="132dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="43dp"
+            android:layout_marginTop="317dp"
+            android:scaleType="fitCenter"
+            android:onClick="imageClick"
+            android:alpha="0.5"
+            android:src="@drawable/classic_suit" />
+
+        <ImageButton
+            android:layout_width="139dp"
+            android:layout_height="132dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="201dp"
+            android:layout_marginTop="317dp"
+            android:onClick="imageClick"
+            android:scaleType="fitCenter"
+            android:alpha="0.5"
+            android:src="@drawable/punk" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/question3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/listview_question"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="38dp" />
+    </RelativeLayout>
+
+
 </android.support.constraint.ConstraintLayout>
