Arregladas un par de cosillas

--- a/quiz/app/src/main/res/layout/activity_first_question.xml
+++ b/quiz/app/src/main/res/layout/activity_first_question.xml
@@ -75,9 +75,10 @@
             <RadioButton
                 android:id="@+id/Volar"
                 android:layout_width="wrap_content"
-                android:padding="8dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:checked="true"
+                android:padding="8dp"
                 android:text="Volar" />
 
             <RadioButton
@@ -202,7 +203,7 @@
         <ListView
             android:id="@+id/listview_question"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="400dp"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="38dp" />
     </RelativeLayout>
