Arreglado error texto y error listview

--- a/quiz/app/src/main/res/layout/activity_first_question.xml
+++ b/quiz/app/src/main/res/layout/activity_first_question.xml
@@ -75,9 +75,10 @@
             <RadioButton
                 android:id="@+id/Volar"
                 android:layout_width="wrap_content"
-                android:padding="8dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:checked="true"
+                android:padding="8dp"
                 android:text="Volar" />
 
             <RadioButton
@@ -86,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:layout_weight="1"
-                android:text="Lanrzar Telarañas" />
+                android:text="Lanzar Telarañas" />
 
             <RadioButton
                 android:id="@+id/Encoger"
@@ -202,9 +203,9 @@
         <ListView
             android:id="@+id/listview_question"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="350dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="38dp" />
+            android:layout_marginBottom="2dp" />
     </RelativeLayout>
 
 
