--- a/QuizPro/app/src/main/res/layout/activity_configuration.xml
+++ b/QuizPro/app/src/main/res/layout/activity_configuration.xml
@@ -15,6 +15,7 @@
         android:text="@string/config"
         android:textColor="#000"
         android:textSize="60sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,24 +28,24 @@
         android:layout_width="329dp"
         android:layout_height="80dp"
         android:gravity="center"
-        android:text="Login/Registro"
+        android:text="Perfiles"
         android:textColor="#000"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.26" />
+        app:layout_constraintVertical_bias="0.193" />
 
     <EditText
         android:id="@+id/plain_text_input"
         android:layout_width="255dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="1dp"
-        android:layout_marginTop="244dp"
+        android:layout_marginTop="16dp"
         android:inputType="text"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -53,38 +54,62 @@
         android:id="@+id/send"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:layout_marginTop="300dp"
         android:background="#DF1F2D"
-        android:text="Enviar"
-        android:textSize="35sp"
+        android:onClick="chooseProfile"
+        android:text="Gestionar"
+        android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:text="Gestionar" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="329dp"
         android:layout_height="80dp"
-        android:layout_marginTop="436dp"
         android:gravity="center"
         android:text="Dificultad"
         android:textColor="#000"
         android:textSize="40sp"
-        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/send" />
 
     <Button
         android:id="@+id/dif"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:layout_marginTop="509dp"
         android:background="#DF1F2D"
+        android:onClick="setDifficulty"
         android:text="5 preguntas"
-        android:textSize="25sp"
+        android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="363dp"
+        android:layout_height="80dp"
+        android:gravity="center"
+        android:text="Preguntas"
+        android:textColor="#000"
+        android:textSize="40sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dif" />
+
+    <Button
+        android:id="@+id/questions"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:background="#DF1F2D"
+        android:onClick="setQuestions"
+        android:text="Conjunto 1"
+        android:textSize="30sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
 
 </android.support.constraint.ConstraintLayout>
