Realizada lista de seleccion de usuario con:
   Foto
   Puntuacion
   Num partidas
   Fecha ultima partida
Realizada seleccion de usuario en la lista
Añadido el crear un nuevo usuario a la pestaña perfiles

--- a/QuizPro/app/src/main/res/layout/activity_profile.xml
+++ b/QuizPro/app/src/main/res/layout/activity_profile.xml
@@ -35,11 +35,12 @@
         <ListView
             android:id="@+id/listview_question"
             android:layout_width="match_parent"
-            android:layout_height="550dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="57dp"
+            android:layout_height="500dp"
+
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="116dp"
             android:gravity="center"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -49,19 +50,22 @@
         android:id="@+id/selectUser"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:background="#DF1F2D"
-        android:text="Seleccionar usuario"
         android:layout_marginTop="75dp"
+        android:background="#DF1F2D"
+        android:onClick="selectUser"
+        android:text="Seleccionar usuario"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
     <Button
         android:id="@+id/createUser"
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginTop="75dp"
         android:background="#DF1F2D"
+        android:onClick="createUserMenu"
         android:text="Crear usuario"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -87,6 +91,7 @@
         android:layout_width="255dp"
         android:layout_height="wrap_content"
         android:inputType="text"
+        android:textAlignment="center"
         android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -97,11 +102,40 @@
         android:id="@+id/send"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:background="#DF1F2D"
         android:layout_marginTop="16dp"
+        android:background="#DF1F2D"
+        android:onClick="createUser"
         android:text="Confirmar"
         android:textSize="30sp"
         android:visibility="invisible"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/plain_text_input" />
+
+    <Button
+        android:id="@+id/update"
+        android:layout_width="182dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="155dp"
+        android:background="#DF1F2D"
+        android:text="Modificar"
+        android:textSize="15sp"
+        android:visibility="invisible"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/plain_text_input" />
+
+    <Button
+        android:id="@+id/delete"
+        android:layout_width="187dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="155dp"
+        android:background="#DF1F2D"
+        android:text="Eliminar"
+        android:textSize="15sp"
+        android:visibility="invisible"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/plain_text_input" />
