--- a/QuizPro/app/src/main/res/layout/activity_clasification.xml
+++ b/QuizPro/app/src/main/res/layout/activity_clasification.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#447BBE"
+    android:background="@drawable/background3"
     tools:context=".Clasification">
 
     <TextView
@@ -13,23 +13,20 @@
         android:layout_height="121dp"
         android:gravity="center"
         android:text="Mejores scores"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.035" />
+        />
 
     <RelativeLayout
         android:id="@+id/question3"
         android:layout_width="match_parent"
         android:layout_height="700dp"
-        android:layout_marginTop="150dp"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView3"
         >
 
         <ListView
@@ -37,7 +34,8 @@
             android:layout_width="match_parent"
             android:layout_height="550dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="0dp"
+            android:layout_marginBottom="30dp"
+            android:textColor="#fff"
             android:gravity="center"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
