--- a/QuizPro/app/src/main/res/layout/activity_intro.xml
+++ b/QuizPro/app/src/main/res/layout/activity_intro.xml
@@ -12,8 +12,7 @@
         android:id="@+id/imageView3"
         android:layout_width="354dp"
         android:layout_height="356dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.466"
+
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -32,7 +31,7 @@
         android:textSize="40sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintBottom_toTopOf="@+id/startButton" />
 
     <ImageButton
         android:id="@+id/startButton"
@@ -42,7 +41,7 @@
         app:srcCompat="@drawable/webred"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:contentDescription="@string/botonstart" />
 
     <TextView
