--- a/QuizPro/app/src/main/res/layout/activity_profile.xml
+++ b/QuizPro/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#447BBE"
+    android:background="@drawable/background3"
     tools:context=".Profile">
 
     <TextView
@@ -13,14 +13,12 @@
         android:layout_height="121dp"
         android:gravity="center"
         android:text="Perfiles"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.035" />
+        />
 
     <RelativeLayout
         android:id="@+id/question3"
@@ -36,7 +34,7 @@
             android:id="@+id/listview_question"
             android:layout_width="match_parent"
             android:layout_height="500dp"
-
+            android:textColor="#fff"
             android:layout_alignParentTop="true"
             android:layout_marginTop="116dp"
             android:gravity="center"
@@ -52,6 +50,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="75dp"
         android:background="#DF1F2D"
+        android:textColor="#fff"
         android:onClick="selectUser"
         android:text="Seleccionar usuario"
         android:textSize="30sp"
@@ -65,6 +64,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="75dp"
         android:background="#DF1F2D"
+        android:textColor="#fff"
         android:onClick="createUserMenu"
         android:text="Crear usuario"
         android:textSize="30sp"
@@ -79,7 +79,7 @@
         android:gravity="center"
         android:text="Crear usuario"
         android:layout_marginTop="16dp"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="40sp"
         android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -92,6 +92,7 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:textAlignment="center"
+        android:textColor="#fff"
         android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -104,6 +105,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="16dp"
         android:background="#DF1F2D"
+        android:textColor="#fff"
         android:onClick="createUser"
         android:text="Confirmar"
         android:textSize="30sp"
@@ -118,6 +120,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="155dp"
         android:background="#DF1F2D"
+        android:textColor="#fff"
         android:onClick="updatePhoto"
         android:text="Modificar"
         android:textSize="15sp"
@@ -133,6 +136,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="155dp"
         android:background="#DF1F2D"
+        android:textColor="#fff"
         android:onClick="deleteUser"
         android:text="Eliminar"
         android:textSize="15sp"
@@ -148,8 +152,8 @@
         android:layout_height="293dp"
         android:gravity="center"
         android:text=""
-        android:textColor="#000"
-        android:textSize="40sp"
+        android:textColor="#fff"
+        android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -163,6 +167,7 @@
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
         android:background="#DF1F2D"
+        android:textColor="#fff"
         android:onClick="deleteUserConfirm"
         android:text="si"
         android:textSize="24sp"
@@ -176,8 +181,9 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:background="#DF1F2D"
+        android:textColor="#fff"
         android:onClick="deleteUserDeny"
         android:text="no"
         android:textSize="24sp"
