--- a/QuizPro/app/src/main/res/layout/activity_configuration.xml
+++ b/QuizPro/app/src/main/res/layout/activity_configuration.xml
@@ -41,7 +41,7 @@
         android:id="@+id/send"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="chooseProfile"
         android:text="Gestionar"
@@ -67,7 +67,7 @@
         android:id="@+id/dif"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="setDifficulty"
         android:text="5 preguntas"
@@ -93,7 +93,7 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginBottom="3dp"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="setQuestions"
         android:text="Conjunto 1"
