--- a/QuizPro/app/src/main/res/layout/activity_menu.xml
+++ b/QuizPro/app/src/main/res/layout/activity_menu.xml
@@ -25,7 +25,7 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginTop="52dp"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:text="@string/jugar"
         android:textSize="35sp"
         android:textColor="#fff"
@@ -40,7 +40,7 @@
         android:layout_marginTop="36dp"
         android:text="@string/clasificacion"
         android:textSize="25sp"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -52,7 +52,7 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginTop="36dp"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:text="@string/configuracion"
         android:textSize="24sp"
         android:textColor="#fff"
@@ -81,7 +81,7 @@
         android:id="@+id/yes"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:text="si"
         android:textSize="24sp"
@@ -95,7 +95,7 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginTop="36dp"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:text="no"
         android:textSize="24sp"
