--- a/QuizPro/app/src/main/res/layout/activity_profile.xml
+++ b/QuizPro/app/src/main/res/layout/activity_profile.xml
@@ -49,7 +49,7 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginTop="75dp"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="selectUser"
         android:text="Seleccionar usuario"
@@ -63,7 +63,7 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginTop="75dp"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="createUserMenu"
         android:text="Crear usuario"
@@ -104,7 +104,7 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginTop="16dp"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="createUser"
         android:text="Confirmar"
@@ -119,7 +119,7 @@
         android:layout_width="182dp"
         android:layout_height="50dp"
         android:layout_marginTop="155dp"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="updatePhoto"
         android:text="Modificar"
@@ -135,7 +135,7 @@
         android:layout_width="187dp"
         android:layout_height="50dp"
         android:layout_marginTop="155dp"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="deleteUser"
         android:text="Eliminar"
@@ -166,7 +166,7 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="deleteUserConfirm"
         android:text="si"
@@ -182,7 +182,7 @@
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:background="#DF1F2D"
+        android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="deleteUserDeny"
         android:text="no"
