Añadidas preguntas, grupos de preguntas y cantidad de preguntas (solo va el grupo 1 aun)

--- a/QuizPro/app/src/main/res/layout/activity_questions.xml
+++ b/QuizPro/app/src/main/res/layout/activity_questions.xml
@@ -96,8 +96,9 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:background="#DF1F2D"
             android:onClick="checkCorrectQuestion"
+            android:background="@drawable/buttonshapecolor"
+            android:textColor="#fff"
             android:text="Siguiente"
             android:textAlignment="center" />
     </RelativeLayout>
