--- a/QuizPro/app/src/main/res/layout/activity_menu.xml
+++ b/QuizPro/app/src/main/res/layout/activity_menu.xml
@@ -26,9 +26,10 @@
         android:layout_height="100dp"
         android:layout_marginTop="52dp"
         android:background="@drawable/buttonshapecolor"
+        android:onClick="Play"
         android:text="@string/jugar"
-        android:textSize="35sp"
         android:textColor="#fff"
+        android:textSize="35sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -38,10 +39,11 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginTop="36dp"
-        android:text="@string/clasificacion"
-        android:textSize="25sp"
         android:background="@drawable/buttonshapecolor"
+        android:onClick="Clasification"
+        android:text="@string/clasificacion"
         android:textColor="#fff"
+        android:textSize="25sp"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -53,9 +55,10 @@
         android:layout_height="100dp"
         android:layout_marginTop="36dp"
         android:background="@drawable/buttonshapecolor"
+        android:onClick="Configuration"
         android:text="@string/configuracion"
-        android:textSize="24sp"
         android:textColor="#fff"
+        android:textSize="24sp"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -82,8 +85,9 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:background="@drawable/buttonshapecolor"
-        android:textColor="#fff"
+        android:onClick="Confirm"
         android:text="si"
+        android:textColor="#fff"
         android:textSize="24sp"
         android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -96,8 +100,9 @@
         android:layout_height="100dp"
         android:layout_marginTop="36dp"
         android:background="@drawable/buttonshapecolor"
-        android:textColor="#fff"
+        android:onClick="Deny"
         android:text="no"
+        android:textColor="#fff"
         android:textSize="24sp"
         android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
